# fuzzy-search

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  _clang-format
.github/workflows/: cmake-single-platform.yml
benchmark/: CMakeLists.txt  Files.h  FuzzySearchBenchmark.cpp  main.cpp
src/: CMakeLists.txt  FuzzySearch.cpp  FuzzySearch.h  FuzzySearch.inl  FuzzySearch_C.cpp  FuzzySearch_C.h
src/FuzzySearch/: CMakeLists.txt
test/: CMakeLists.txt  TestFuzzySearch.cpp  main.cpp
